name:                radpmc
version:             0.1.0.0
synopsis:            RadPMC is a library to solve the Schroedinger equation for a spherically symmetric potential.
-- description:
homepage:            https://github.com/SchneePingu/radpmc
license:             BSD3
license-file:        LICENSE
author:              Daniel Mueller
maintainer:          daniel.mueller-email@web.de
-- copyright:
category:            Physics
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:  RadPMC
  -- other-modules:
  -- other-extensions:
  build-depends:    base >=4.12 && <4.13
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -dynamic
